syntax = "proto3";
package prismfinance.prismcore.amm;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/prism-finance/prism-core/x/amm/types";

message YammConfiguration {
  uint64 pool_id = 1;

  // duration (milliseconds) for virtual balance when adding new pAssets to yamm pools
  string maturity_introduction_interval_millis = 2 [(cosmos_proto.scalar) = "cosmos.Int", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = true];
  string maturity_expiration_interval_millis = 3 [(cosmos_proto.scalar) = "cosmos.Int", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = true];
  string expiration_virtual_balance_scaler = 4 [(cosmos_proto.scalar) = "cosmos.Dec", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = true];
  // if the value is not set, will be read from module parameters
  // discount ratio applied to constant sum equations for trading cAsset-pAsset where pAsset is expired or close
  // to expiry
  string expired_asset_discount_ratio = 5 [(cosmos_proto.scalar) = "cosmos.Dec", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = true];

  // if the value is not set, will be read from module parameters
  string buy_y_given_in_loan_fee_ratio = 6 [(cosmos_proto.scalar) = "cosmos.Dec", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = true];
  // if the value is not set, will be read from module parameters
  string sell_y_given_out_fee_ratio = 7 [(cosmos_proto.scalar) = "cosmos.Dec", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = true];
  // if the value is not set, will be read from module parameters
  string swap_yield_fee_ratio = 8 [(cosmos_proto.scalar) = "cosmos.Dec", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = true];
  // if the value is not set, will be read from module parameters
  string leverage_scaler = 9 [(cosmos_proto.scalar) = "cosmos.Dec", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = true];

  // zero means no limit, and nil means using the value from module parameters
  string max_weight_ratio = 10 [(cosmos_proto.scalar) = "cosmos.Dec", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = true];
}

